<resources>
    <string name="app_name">Connect</string>
    <string name="action_delete">Delete Event?</string>
    <string name="action_timetable">Timetable</string>
    <string name="action_logout">Log out</string>
    <string name="action_signup">Sign up here</string>


    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Connect</string>
    <string name="title_activity_signup">Sign up here</string>
    <string name="input_email" />
    <string name="input_username" />
    <string name="linkToSignup">No Account? Sign up now</string>
    <string name="linkToSignin">Have an account? Sign in</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="uploadBtn">Save</string>
    <string name="uploadOne">Upload</string>
    <string name="title_activity_uni_activities">New Event</string>
    <string name="module">Module :</string>
    <string name="type">Type:</string>


    <string name="activityType">Choose one</string>
    <string name="title">Title :</string>
    <string name="worth">Worth:</string>
    <string name="dueDate">Due Date :</string>
    <string name="saveDetails">Save</string>
    <string-array name="activityType">
        <item>Project</item>
        <item>Exam</item>
        <item>Presentation</item>
        <item>Essay</item>
        <item>Other</item>
    </string-array>

    <string name="namelabel">"Name : "</string>
    <string name="typelabel">Type: </string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Login</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <!-- messagesss-->
    <string name="title_activity_message_adapter">MessageAdapter</string>
    <string name="title_activity_messaging">Message</string>
    <string name="login_activity_label">Messaging </string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_list_users">Users</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_elipses">Message...</string>
    <string name="logout">Logout</string>


    <string name="menu_settings">Settings</string>
    <string name="button">Download</string>


    <string name="title_activity_google_places">GooglePlaces</string>
    <string name="title_activity_places">Places</string>
    <string name="default_place_text">Search for a place here</string>
    <string name="google_api_key">AIzaSyB3h5y3WhDfL9mGnb6O1DAJJoMvjMjReLE</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_project">Project</string>
    <string name="title_activity_single_item_view">All Details</string>
    <string name="title_activity_user_profile">Your Profile</string>
    <string name="deletePBtn">delete Profile</string>
    <string name="due">Due:</string>
    <string name="details" />
    <string name="mdetails">More details about the upcoming event here.</string>
    <string name="saveChanges">Save Changes</string>
    <string name="title_activity_testing">Testing</string>
    <string name="userName">Name</string>
    <string name="title_activity_message_right">message_right</string>
    <string name="title_activity_message_left">message_left</string>
</resources>
