<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="www.wit.ie.connect.college.UniActivities"
    tools:showIn="@layout/activity_uni_activities">

<!--    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >


    <!--first one-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/module"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/subject_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/activityType"
        android:layout_alignStart="@+id/activityType"
        android:layout_below="@+id/textview" />

    <!--end of first one-->


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/activityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView"
        android:clickable="true"
        android:ems="10"
        android:spinnerMode="dropdown" />

    <!--end of 2nd one-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="115dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignStart="@+id/activityType"
        android:layout_alignEnd="@+id/activityType"
        />

    <!-- end of 3rd one-->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="170dp"
        android:text="@string/worth"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/worth_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_above="@+id/etxt_fromdate"
        android:layout_alignStart="@+id/title_input"
        android:layout_alignParentEnd="true" />
    <!--end of 4th one-->

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="28dp"
        android:text="@string/due"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etxt_fromdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/worth_input" />


    <!-- end of 5th one-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/details"
        android:text="@string/details"
        android:hint="@string/mdetails"
        android:layout_alignStart="@+id/etxt_fromdate"
        android:layout_below="@+id/etxt_fromdate"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:editable="true"
        android:enabled="true"
        android:gravity="top" />


    <Button
        android:id="@+id/save_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:onClick="onSave"
        android:text="@string/saveDetails"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/details" />



    <!--</ScrollView>-->
</RelativeLayout>
    </ScrollView>
